added a box to the main title screen for use for the later pages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="shortcut icon" href="./assets/codestacklogo.png" />
 </head>
 <body>
-    div
+    <div id="container1" class="flex-container backgroundimg">
+        <div class="flex-item">
+        </div>
+    </div>
 </body>
 </html>
