took out uncessesartycode

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="./assets/codestacklogo.png" />
 </head>
 <body>
-    <div id="container1" class="flex-container backgroundimg">
+    <div id="container1" class="flex-container">
         <div class="flex-item">
         </div>
     </div>
