Added start-screen id tag with background

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="container1" class="flex-container">
-        <div class="flex-item">
+        <div id="start-screen" class="flex-item">
         </div>
     </div>
 </body>
