--- a/pages/page1.html
+++ b/pages/page1.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
+    <div id="container1" class="flex-container">
+        <div id="start-screen" class="flex-item">
+            <div class="title-card">
+                <h1>Placeholder CYOA Name</h1>
+            </div>
+
+            <div class="start-button">
+                <a href="./pages/page1.html"><h2>Start</h2></a>
+            </div>
+            <!-- <div class="translucent-panel"> -->
+
+                <!-- Game over pages use code below -->
+                <!-- <h2 class="game-over-text"></h2> -->
+                <!-- <a href="../index.html"><div class="play-again"><h2>Play Again</h2></div></a> -->
+                
+                <!-- Options pages use code below -->
+                <!-- <p class="story-text"></p> -->
+                <!-- <a href="../index.html"><div class="left-button"><h2></h2></div></a> -->
+                <!-- <a href="../index.html"><div class="right-button"><h2></h2></div></a> -->
+
+            <!-- </div> -->
+        </div>
     
 </body>
 </html>
