Just added the background images for each page and linked all of them together

--- a/pages/page1.html
+++ b/pages/page1.html
@@ -8,18 +8,14 @@
 </head>
 <body>
     <div id="container1" class="flex-container">
-        <div id="start-screen" class="flex-item">
-          
-
-             <div class="translucent-panel"> 
-
-
+        <div id="pagebackone" class="flex-item">
+             <div id="translucent-box" class="translucent-panel"> 
                  <p class="story-text">something</p> 
-                 <a href="../index.html"><div class="left-button"><h2>Left</h2></div></a> 
-                 <a href="../index.html"><div class="right-button"><h2>Right</h2></div></a> 
-
+                 <div id="containerbtn" class="flexcontainer">
+                     <div class="left-button"></div><a href="../pages/page2.html"><h2>Left</h2></a></div>
+                     <div class="right-button"></div><a href="../pages/page3.html"><h2>Right</h2></a> </div>
+                 </div>
            </div>
         </div>
-    
 </body>
 </html>
