--- a/pages/page2.html
+++ b/pages/page2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="container1" class="flex-container">
-        <div id="start-screen" class="flex-item">
+        <div id="pagebacktwo" class="flex-item">
             <div class="title-card">
         
             </div>
