Fixed the button spacing

--- a/pages/page1.html
+++ b/pages/page1.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page 1</title>
-    <link rel="stylesheet" href="../style/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../style/styles.css" />
+  </head>
+
+  <body>
     <div id="container1" class="flex-container">
-        <div id="pagebackone" class="flex-item">
-             <div id="translucent-box" class="translucent-panel"> 
-                 <p class="story-text">something</p> 
-                 <div id="containerbtn" class="flexcontainer">
-                     <div class="left-button"></div><a href="../pages/page2.html"><h2>Left</h2></a></div>
-                     <div class="right-button"></div><a href="../pages/page3.html"><h2>Right</h2></a> </div>
-                 </div>
-           </div>
+      <div id="pagebackone" class="flex-item">
+        <div id="translucent-box" class="translucent-panel">
+          <p class="story-text">something</p>
+          <div id="containerbtn" class="flex-button-area">
+            <div class="left-button">
+              <a href="../pages/page2.html">
+                <h2>Left</h2>
+              </a>
+            </div>
+            <div class="right-button">
+              <a href="../pages/page3.html">
+                <h2>Right</h2>
+              </a>
+            </div>
+          </div>
         </div>
-</body>
+      </div>
+    </div>
+  </body>
 </html>
