Just fixed the left and right buttons for the pages

--- a/pages/page3.html
+++ b/pages/page3.html
@@ -11,10 +11,18 @@
         <div id="pagebackthree" class="flex-item">
              <div id="translucent-box" class="translucent-panel"> 
                  <p class="story-text">something</p> 
-                 <div id="containerbtn" class="flexcontainer">
-                     <div class="left-button"></div><a href="../pages/page4.html"><h2>Left</h2></a></div>
-                     <div class="right-button"></div><a href="../pages/page5.html"><h2>Right</h2></a> </div>
-                 </div>
+                 <div id="containerbtn" class="flex-button-area">
+                    <div class="left-button">
+                      <a href="../pages/page4.html">
+                        <h2>Left</h2>
+                      </a>
+                    </div>
+                    <div class="right-button">
+                      <a href="../pages/page5.html">
+                        <h2>Right</h2>
+                      </a>
+                    </div>
+                  </div>
            </div>
         </div>
 </body>
