--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
 
             <div class="start-button">
-                <a href="./pages/page1.html"><h2>Start</h2></a>
+                <a href="./pages/page1.html"><h2 class="button-style">Start</h2></a>
             </div>
             <!-- <div class="translucent-panel"> -->
 
