--- a/pages/page6.html
+++ b/pages/page6.html
@@ -14,12 +14,12 @@
                  <div id="containerbtn" class="flex-button-area">
                     <div class="left-button">
                       <a href="../pages/page8.html">
-                        <h2>Left</h2>
+                        <h2 class="button-style">Left</h2>
                       </a>
                     </div>
                     <div class="right-button">
                       <a href="../pages/page9.html">
-                        <h2>Right</h2>
+                        <h2 class="button-style">Right</h2>
                       </a>
                     </div>
                   </div>
