just soem small edits

--- a/pages/page2.html
+++ b/pages/page2.html
@@ -12,7 +12,7 @@
 
             <div class="translucent-panel"> 
 
-                <h2 class="game-over-text"></h2>
+                <h2 class="game-over-text">something</h2>
                 <div class="play-again">
                     <a href="../index.html">
                         <h2 class="button-style">Play Again</h2>
