--- a/pages/page5.html
+++ b/pages/page5.html
@@ -12,7 +12,8 @@
 
             <div class="translucent-panel"> 
 
-                <h2 class="game-over-text">something</h2>
+                <h2 class="game-over-text">You think that you have better odds against the kleavor...
+                    You didn’t</h2>
                 <div class="play-again">
                     <a href="../index.html">
                         <h2 class="button-style">Play Again</h2>
