--- a/pages/page4.html
+++ b/pages/page4.html
@@ -10,16 +10,17 @@
     <div id="container1" class="flex-container">
         <div id="pagebackfour" class="flex-item">
              <div id="translucent-box" class="translucent-panel"> 
-                 <p class="story-text">something</p> 
+                 <p class="story-text">You plunge into the river below
+                  You need to grab onto something before you drown</p> 
                  <div id="containerbtn" class="flex-button-area">
                     <div class="left-button">
                       <a href="../pages/page6.html">
-                        <h2 class="button-style">Left</h2>
+                        <h2 class="button-style">This Log</h2>
                       </a>
                     </div>
                     <div class="right-button">
                       <a href="../pages/page7.html">
-                        <h2 class="button-style">Right</h2>
+                        <h2 class="button-style">That Log</h2>
                       </a>
                     </div>
                   </div>
