--- a/pages/page6.html
+++ b/pages/page6.html
@@ -10,16 +10,18 @@
     <div id="container1" class="flex-container">
         <div id="pagebacksix" class="flex-item">
              <div id="translucent-box" class="translucent-panel"> 
-                 <p class="story-text">something</p> 
+                 <p class="story-text">You grab ths log, fortunately its a real log
+
+                  Floating onto shore you begin to feel a mythical presence...</p> 
                  <div id="containerbtn" class="flex-button-area">
                     <div class="left-button">
                       <a href="../pages/page8.html">
-                        <h2 class="button-style">Left</h2>
+                        <h2 class="button-style">Go Left</h2>
                       </a>
                     </div>
                     <div class="right-button">
                       <a href="../pages/page9.html">
-                        <h2 class="button-style">Right</h2>
+                        <h2 class="button-style">Go Right</h2>
                       </a>
                     </div>
                   </div>
