--- a/pages/page1.html
+++ b/pages/page1.html
@@ -11,16 +11,16 @@
     <div id="container1" class="flex-container">
       <div id="pagebackone" class="flex-item">
         <div id="translucent-box" class="translucent-panel">
-          <p class="story-text">something</p>
+          <p class="story-text">You are on a quest to find the Mythical Pokemon Mew in the middle of a jungle there are two paths to take</p>
           <div id="containerbtn" class="flex-button-area">
             <div class="left-button">
               <a href="../pages/page2.html">
-                <h2 class="button-style">Left</h2>
+                <h2 class="button-style">Go Left</h2>
               </a>
             </div>
             <div class="right-button">
               <a href="../pages/page3.html">
-                <h2 class="button-style">Right</h2>
+                <h2 class="button-style">Go Right</h2>
               </a>
             </div>
           </div>
