--- a/pages/page2.html
+++ b/pages/page2.html
@@ -12,7 +12,8 @@
 
             <div class="translucent-panel"> 
 
-                <h2 class="game-over-text">something</h2>
+                <p class="story-text">You have run into a swarm of Durant who drag you into their nest</p>
+                <h2 class="game-over-text">Game Over</h2>
                 <div class="play-again">
                     <a href="../index.html">
                         <h2 class="button-style">Play Again</h2>
