did a bit of cleaning up as well as added the last of the pages

--- a/pages/page5.html
+++ b/pages/page5.html
@@ -12,8 +12,10 @@
 
             <div class="translucent-panel"> 
 
-                <h2 class="game-over-text">You think that you have better odds against the kleavor...
-                    You didn’t</h2>
+                <p class="story-text">You think that you have better odds surviving against the Kleavor...
+                    <br>
+                    You didn’t</p>
+                    <h2 class="game-over-text">Game Over</h2>
                 <div class="play-again">
                     <a href="../index.html">
                         <h2 class="button-style">Play Again</h2>
