--- a/pages/page8.html
+++ b/pages/page8.html
@@ -11,8 +11,14 @@
         <div id="pagebackeight" class="flex-item">
 
             <div class="translucent-panel"> 
-
-                <h2 class="game-over-text">something</h2>
+                <p class="story-text">You Go Left
+                    <br>
+                    You manage to spot the Mythical Pokemon Zarude in the distance
+                    <br>
+                    While not Mew, is still impressive none the less.</p>
+                <h2>Not a Win
+                    <br>
+                    But not a Complete Loss Either</h2>
                 <div class="play-again">
                     <a href="../index.html">
                         <h2 class="button-style">Play Again</h2>
