--- a/pages/page9.html
+++ b/pages/page9.html
@@ -12,7 +12,13 @@
 
             <div class="translucent-panel"> 
 
-                <h2 class="game-over-text">something</h2>
+                <p class="story-text">You go right...
+                    <br>
+                    And you have managed to catch a sight of the Mythical Pokemon Mew!
+                <br>
+                    Despite everything that happened, your quest was not in vain.
+                </p>
+            <h2>YOU WIN</h2>
                 <div class="play-again">
                     <a href="../index.html">
                         <h2 class="button-style">Play Again</h2>
