--- a/pages/page1.html
+++ b/pages/page1.html
@@ -11,7 +11,9 @@
     <div id="container1" class="flex-container">
       <div id="pagebackone" class="flex-item">
         <div id="translucent-box" class="translucent-panel">
-          <p class="story-text">You are on a quest to find the Mythical Pokemon Mew in the middle of a jungle there are two paths to take</p>
+          <p class="story-text">You are on a quest to find the Mythical Pokemon Mew in the middle of a Jungle
+            <br>
+            There are two paths to take</p>
           <div id="containerbtn" class="flex-button-area">
             <div class="left-button">
               <a href="../pages/page2.html">
