--- a/pages/page3.html
+++ b/pages/page3.html
@@ -10,9 +10,9 @@
     <div id="container1" class="flex-container">
         <div id="pagebackthree" class="flex-item">
              <div id="translucent-box" class="translucent-panel"> 
-                 <p class="story-text">You take the right path suddenly you are chased by an angry Kleavor</p> 
-                 <p class="story-text">Your on a cliff's end with a river at the bottom with the Kleavor still chasing you!</p> 
-                 <p class="story-text">Do you risk the jump?</p> 
+                 <p class="story-text">You take the right path suddenly you are chased by an angry Kleavor
+                 <br>Your on a cliff's end with a river at the bottom with the Kleavor still chasing you!
+                  <br>Do you risk the jump?</p> 
                  <div id="containerbtn" class="flex-button-area">
                     <div class="left-button">
                       <a href="../pages/page4.html">
