--- a/pages/page6.html
+++ b/pages/page6.html
@@ -10,9 +10,10 @@
     <div id="container1" class="flex-container">
         <div id="pagebacksix" class="flex-item">
              <div id="translucent-box" class="translucent-panel"> 
-                 <p class="story-text">You grab ths log, fortunately its a real log
-
-                  Floating onto shore you begin to feel a mythical presence...</p> 
+                 <p class="story-text">You grab 'This' Log
+                  <br> Fortunately it's a real log.
+                  <br>
+                As you float onto shore you begin to feel a mythical presence...</p> 
                  <div id="containerbtn" class="flex-button-area">
                     <div class="left-button">
                       <a href="../pages/page8.html">
