--- a/pages/page7.html
+++ b/pages/page7.html
@@ -12,7 +12,13 @@
 
             <div class="translucent-panel"> 
 
-                <h2 class="game-over-text">something</h2>
+                <p class="story-text">You grab 'That' Log
+                    <br>
+                    It's a hungry Feraligatr...
+                    <br>
+                    You are Toast
+                </p>
+                <h2 class="game-over-text">Game Over</h2>
                 <div class="play-again">
                     <a href="../index.html">
                         <h2 class="button-style">Play Again</h2>
