just a minor fix

--- a/pages/page2.html
+++ b/pages/page2.html
@@ -12,7 +12,9 @@
 
             <div class="translucent-panel"> 
 
-                <p class="story-text">You have run into a swarm of Durant who drag you into their nest</p>
+                <p class="story-text">You take the Left Path
+                    <br>
+                    You have run into a swarm of Durant who drag you into their nest</p>
                 <h2 class="game-over-text">Game Over</h2>
                 <div class="play-again">
                     <a href="../index.html">
