--- a/pages/page3.html
+++ b/pages/page3.html
@@ -10,7 +10,9 @@
     <div id="container1" class="flex-container">
         <div id="pagebackthree" class="flex-item">
              <div id="translucent-box" class="translucent-panel"> 
-                 <p class="story-text">You take the right path suddenly you are chased by an angry Kleavor
+                 <p class="story-text">You take the Right Path
+                  <br>
+                  Suddenly you are chased by an angry Kleavor
                  <br>Your on a cliff's end with a river at the bottom with the Kleavor still chasing you!
                   <br>Do you risk the jump?</p> 
                  <div id="containerbtn" class="flex-button-area">
