Removed redundant id tags

--- a/pages/page1.html
+++ b/pages/page1.html
@@ -10,7 +10,7 @@
   <body>
     <div id="container1" class="flex-container">
       <div id="pagebackone" class="flex-item">
-        <div id="translucent-box" class="translucent-panel">
+        <div class="translucent-panel">
           <p class="story-text">You are on a quest to find the Mythical Pokemon Mew in the middle of a Jungle
             <br>
             There are two paths to take</p>
