--- a/pages/page3.html
+++ b/pages/page3.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container1" class="flex-container">
         <div id="pagebackthree" class="flex-item">
-             <div id="translucent-box" class="translucent-panel"> 
+             <div class="translucent-panel"> 
                  <p class="story-text">You take the Right Path
                   <br>
                   Suddenly you are chased by an angry Kleavor
