--- a/pages/page4.html
+++ b/pages/page4.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container1" class="flex-container">
         <div id="pagebackfour" class="flex-item">
-             <div id="translucent-box" class="translucent-panel"> 
+             <div class="translucent-panel"> 
                  <p class="story-text">You plunge into the river below
                   <br>
                   You need to grab onto something before you drown</p> 
