--- a/pages/page6.html
+++ b/pages/page6.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container1" class="flex-container">
         <div id="pagebacksix" class="flex-item">
-             <div id="translucent-box" class="translucent-panel"> 
+             <div class="translucent-panel"> 
                  <p class="story-text">You grab 'This' Log
                   <br> Fortunately it's a real log.
                   <br>
