Made Changes to title page.

--- a/index.html
+++ b/index.html
@@ -12,25 +12,13 @@
 <body>
     <div id="container1" class="flex-container">
         <div id="start-screen" class="flex-item">
-            <div class="title-card">
-                <h1>Placeholder CYOA Name</h1>
+            <div class="translucent-panel">
+                <h1>Jungle Adventure</h1>
             </div>
 
             <div class="start-button">
                 <a href="./pages/page1.html"><h2 class="button-style">Start</h2></a>
             </div>
-            <!-- <div class="translucent-panel"> -->
-
-                <!-- Game over pages use code below -->
-                <!-- <h2 class="game-over-text"></h2> -->
-                <!-- <a href="../index.html"><div class="play-again"><h2>Play Again</h2></div></a> -->
-                
-                <!-- Options pages use code below -->
-                <!-- <p class="story-text"></p> -->
-                <!-- <a href="../index.html"><div class="left-button"><h2></h2></div></a> -->
-                <!-- <a href="../index.html"><div class="right-button"><h2></h2></div></a> -->
-
-            <!-- </div> -->
         </div>
     </div>
 </body>
