--- a/pages/page3.html
+++ b/pages/page3.html
@@ -13,7 +13,7 @@
                  <p class="story-text">You take the Right Path
                   <br>
                   Suddenly you are chased by an angry Kleavor
-                 <br>Your on a cliff's end with a river at the bottom with the Kleavor still chasing you!
+                 <br>Your're on a cliff's end with a river at the bottom with the Kleavor still chasing you!
                   <br>Do you risk the jump?</p> 
                  <div id="containerbtn" class="flex-button-area">
                     <div class="left-button">
