Added some fun changes

--- a/pages/page8.html
+++ b/pages/page8.html
@@ -25,7 +25,28 @@
                     </a>
                 </div>
                 
-           
+                <div class="myDIV">
+                    <img
+                      class
+                      src="https://static.thenounproject.com/png/594337-200.png"
+                      alt="dexicon"
+                      width="50"
+                      height="50"
+                    />
+                  </div>
+                  <div class="hide infobox">
+                    <img
+                      class
+                      src="https://archives.bulbagarden.net/media/upload/0/08/Menu_HOME_0893.png"
+                      alt="zarude-icon"
+                      width="100"
+                      height="100"
+                    />
+                    <br>
+                    <h4>Zarude - The Rogue Monkey Pokémon</h4>
+                    <p>Once the vines on Zarude's body tear off, they become nutrients in the soil. This helps the plants of the forest grow.</p>
+                    <br>
+                </div>
 
              </div> 
         </div>
