--- a/pages/page3.html
+++ b/pages/page3.html
@@ -27,6 +27,28 @@
                       </a>
                     </div>
                   </div>
+                  <div class="myDIV">
+                    <img
+                      class
+                      src="https://static.thenounproject.com/png/594337-200.png"
+                      alt="dexicon"
+                      width="50"
+                      height="50"
+                    />
+                  </div>
+                  <div class="hide infobox">
+                    <img
+                      class
+                      src="https://archives.bulbagarden.net/media/upload/3/3d/Menu_HOME_0900.png"
+                      alt="kleavoricon"
+                      width="100"
+                      height="100"
+                    />
+                    <br>
+                    <h4>Kleavor - The Axe Pokémon</h4>
+                    <p>This Pokémon is a rough, crude, and violent sort. It swings around its large, heavy stone axes to finish off its prey.</p>
+                    <br>
+                </div>
            </div>
         </div>
 </body>
