--- a/pages/page9.html
+++ b/pages/page9.html
@@ -25,7 +25,30 @@
                     </a>
                 </div>
                 
-           
+                <div class="myDIV">
+                    <img
+                      class
+                      src="https://static.thenounproject.com/png/594337-200.png"
+                      alt="dexicon"
+                      width="50"
+                      height="50"
+                    />
+                  </div>
+                  <div class="hide infobox">
+                    <img
+                      class
+                      src="https://archives.bulbagarden.net/media/upload/e/e7/Menu_HOME_0151.png"
+                      alt="mew-icon"
+                      width="100"
+                      height="100"
+                    />
+                    <br>
+                    <h4>Mew - The New Species Pokémon</h4>
+                    <p>It's very intelligent and can use an incredible variety of moves. Many believe that all other Pokémon are descendants of this one.</p>
+                    <br>
+                </div>
+
+             </div> 
 
              </div> 
         </div>
