--- a/pages/page2.html
+++ b/pages/page2.html
@@ -20,7 +20,7 @@
                     <h2 class="game-over-text">Game Over</h2>
                     <button popovertarget="myheader"><img
                         class
-                        src="https://static.thenounproject.com/png/594337-200.png"
+                        src="/assets/dexicon.png"
                         alt="dexicon"
                         width="50"
                         height="50"
@@ -32,7 +32,7 @@
                 </div>
                 <div popover id="myheader"><img
                     class
-                    src="https://archives.bulbagarden.net/media/upload/0/04/Menu_HOME_0632.png"
+                    src="/assets/duranticon.png"
                     alt="durant-icon"
                     width="100"
                     height="100"
