--- a/pages/page3.html
+++ b/pages/page3.html
@@ -17,7 +17,7 @@
                   <br>Do you risk the jump?</p> 
                   <button popovertarget="myheader"><img
                     class
-                    src="https://static.thenounproject.com/png/594337-200.png"
+                    src="/assets/dexicon.png"
                     alt="dexicon"
                     width="50"
                     height="50"
@@ -35,7 +35,7 @@
                     </div>
                     <div popover id="myheader"><img
                       class
-                      src="https://archives.bulbagarden.net/media/upload/3/3d/Menu_HOME_0900.png"
+                      src="/assets/kleavoricon.png"
                       alt="kleavoricon"
                       width="100"
                       height="100"
