--- a/pages/page7.html
+++ b/pages/page7.html
@@ -21,7 +21,7 @@
                 <h2 class="game-over-text">Game Over</h2>
                 <button popovertarget="myheader"><img
                     class
-                    src="https://static.thenounproject.com/png/594337-200.png"
+                    src="/assets/dexicon.png"
                     alt="dexicon"
                     width="50"
                     height="50"
@@ -33,7 +33,7 @@
                 </div>
                 <div popover id="myheader"><img
                     class
-                    src="https://archives.bulbagarden.net/media/upload/5/55/Menu_HOME_0160.png"
+                    src="/assets/feraligatricon.png"
                     alt="feraligatr-icon"
                     width="100"
                     height="100"
