--- a/pages/page8.html
+++ b/pages/page8.html
@@ -21,7 +21,7 @@
                     But not a Complete Loss Either</h2>
                     <button popovertarget="myheader"><img
                         class
-                        src="https://static.thenounproject.com/png/594337-200.png"
+                        src="/assets/dexicon.png"
                         alt="dexicon"
                         width="50"
                         height="50"
@@ -33,7 +33,7 @@
                 </div>
                 <div popover id="myheader"><img
                     class
-                    src="https://archives.bulbagarden.net/media/upload/0/08/Menu_HOME_0893.png"
+                    src="/assets/zarudeicon.png"
                     alt="zarude-icon"
                     width="100"
                     height="100"
