--- a/pages/page9.html
+++ b/pages/page9.html
@@ -21,7 +21,7 @@
             <h2>YOU WIN</h2>
             <button popovertarget="myheader"><img
                 class
-                src="https://static.thenounproject.com/png/594337-200.png"
+                src="/assets/dexicon.png"
                 alt="dexicon"
                 width="50"
                 height="50"
@@ -33,7 +33,7 @@
                 </div>
                 <div popover id="myheader"><img
                     class
-                    src="https://archives.bulbagarden.net/media/upload/e/e7/Menu_HOME_0151.png"
+                    src="/assets/mewicon.png"
                     alt="mew-icon"
                     width="100"
                     height="100"
