--- a/pages/page7.html
+++ b/pages/page7.html
@@ -11,7 +11,7 @@
       <!-- NavBar Code from Bootstrap site -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Jungle Adventure Web Game</a>
+      <a class="navbar-brand" href="../index.html">Jungle Adventure Web Game</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
