Added the shortcut icons for all pages; fixed some spelling errors; changed the main screen title

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
     <div id="container1" class="flex-container">
         <div id="start-screen" class="flex-item">
             <div class="translucent-panel">
-                <h1>Jungle Adventure</h1>
+                <img
+                    class = "jungle-title"
+                    src="/assets/jungleadventure.png"
+                    alt="title-icon"
+                    width="400"
+                  />
                 <div class="start-button">
                     <a href="./pages/page1.html">
                         <h2 class="button-style">Start</h2>
