--- a/pages/page1.html
+++ b/pages/page1.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../style/styles.css" />
+  <link rel="shortcut icon" href="./assets/codestacklogo.png" />
 </head>
 
 <body>
@@ -38,7 +39,7 @@
   <div id="container1" class="flex-container">
     <div id="pagebackone" class="flex-item">
       <div class="translucent-panel">
-        <p class="story-text">You are on a quest to find the Mythical Pokemon Mew in the middle of a Jungle
+        <p class="story-text">You are on a quest to find the Mythical Pokemon Mew<br>in the middle of a Jungle
           <br>
           There are two paths to take
         </p>
