--- a/pages/page3.html
+++ b/pages/page3.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../style/styles.css">
+  <link rel="shortcut icon" href="./assets/codestacklogo.png" />
 </head>
 
 <body>
@@ -40,7 +41,7 @@
         <p class="story-text">You take the Right Path
           <br>
           Suddenly you are chased by an angry Kleavor
-          <br>Your're on a cliff's end with a river at the bottom with the Kleavor still chasing you!
+          <br>You're on the edge of a cliff with a river at the bottom with the Kleavor still chasing you!
           <br>Do you risk the jump?
         </p>
         <button popovertarget="myheader"><img class src="/assets/dexicon.png" alt="dexicon" width="50"
