--- a/pages/pokedex.html
+++ b/pages/pokedex.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/styles.css">
     <link rel="shortcut icon" href="./assets/codestacklogo.png" />
+    <link rel="shortcut icon" href="./assets/codestacklogo.png" />
 </head>
 <body>
     <!-- NavBar Code from Bootstrap site -->
